--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <a href="#projects" class="links">Projects</a>
           </div>
           <div class="quick-links">
+            <a href="#club" class="links">Clubs</a>
+          </div>
+          <div class="quick-links">
             <a href="#about" class="links">About</a>
           </div>
           <div class="quick-links">
@@ -81,6 +84,7 @@
           <div class="container_links">
             <div class="menus"><a href="#home">Home</a></div>
             <div class="menus"><a href="#projects">Projects</a></div>
+            <div class="menus"><a href="#club">Clubs</a></div>
             <div class="menus"><a href="#about">About</a></div>
             <div class="menus"><a href="#contact">Contact</a></div>
           </div>
@@ -206,7 +210,7 @@
     <!-- page2ends -->
 
   <div class="project_container">
-    <div class="project">CLUB PARTICIPATION</div>
+    <div class="project" id="club">CLUB PARTICIPATION</div>
   </div>
   <div class="clubs">
     <div class="umsats" >
