--- a/index.html
+++ b/index.html
@@ -149,29 +149,48 @@
         <div class="pro_photo_container" id="pro_photo_container1">
           <div class="pro_photos">
             <img
-              src="assets/project_img/not-gatef.webp"
+              src="assets/project_img/full bit adder.jpg"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">Not-Gate using BJT</div>
+            <div class="info_pro">Full Bit Adder</div>
           </div>
           <div class="pro_photos">
             <img
-              src="assets/project_img/voltage_indic.webp"
+              src="assets/project_img/eseg - 1.png"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">Voltage Indicator</div>
+            <div class="info_pro">EEPROM 7Segment Display</div>
           </div>
         </div>
         <div class="pro_photo_container" id="pro_photo_container2">
           <div class="pro_photos">
             <img
-              src="assets/project_img/togglefinal.webp"
+              src="assets/project_img/Frame-20-04-2025-06-27-36.tiff"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">Toggle Switch</div>
+            <div class="info_pro">Binary Counter + Decoder</div>
+          </div>
+          <div class="pro_photos">
+            <img
+              src="assets/project_img/short.png"
+              alt=""
+              id = "short-cir"
+              class="info_pro_img"
+            />
+            <div class="info_pro">Short Circuit Protection</div>
+          </div>
+        </div>
+        <div class="pro_photo_container" id="pro_photo_container3">
+          <div class="pro_photos">
+            <img
+              src="assets/project_img/motor driver.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">PWM motor speed controller</div>
           </div>
           <div class="pro_photos">
             <img
@@ -179,25 +198,7 @@
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">Led Pattern</div>
-          </div>
-        </div>
-        <div class="pro_photo_container" id="pro_photo_container3">
-          <div class="pro_photos">
-            <img
-              src="assets/project_img/joystick-final.webp"
-              alt=""
-              class="info_pro_img"
-            />
-            <div class="info_pro">Joystick controlled Servo</div>
-          </div>
-          <div class="pro_photos">
-            <img
-              src="assets/project_img/dimmer-final.webp"
-              alt=""
-              class="info_pro_img"
-            />
-            <div class="info_pro">Led Dimmer(PWM)</div>
+            <div class="info_pro">Shift Register Led Display</div>
           </div>
         </div>
       </div>
@@ -232,6 +233,11 @@
       
       <div class="description">
         I love going to work sessions every sunday and tuesdays, meeting like-minded people. I did not work on a particular project but got to help others in their projects like sorting components for the PCB's, entering data into excel sheets, stripping and crimping wires. Occasionally, I helped the electrical lead in setting up and performing <span class="bold">tab testing</span>. I have completed general shop training and am ready for high voltage training for working on the car.
+        <!-- <ul>
+          <ls>Data Entry + Sorting Components</ls>
+          <ls>Soldering SMD/Through-Hole Components</ls>
+          <ls>Problem Solving</ls>
+        </ul> -->
       </div>
     </div>
   </div>
