--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="pro_photo_container" id="pro_photo_container1">
           <div class="pro_photos">
             <img
-              src="assets/project_img/full bit adder.jpg"
+              src="assets/project_img/full bit adder.webp"
               alt=""
               class="info_pro_img"
             />
@@ -157,7 +157,7 @@
           </div>
           <div class="pro_photos">
             <img
-              src="assets/project_img/eseg - 1.png"
+              src="assets/project_img/eseg - 1.webp"
               alt=""
               class="info_pro_img"
             />
@@ -167,7 +167,7 @@
         <div class="pro_photo_container" id="pro_photo_container2">
           <div class="pro_photos">
             <img
-              src="assets/project_img/Frame-20-04-2025-06-27-36.tiff"
+              src="assets/project_img/Frame-20-04-2025-06-27-36.webp"
               alt=""
               class="info_pro_img"
             />
@@ -175,7 +175,7 @@
           </div>
           <div class="pro_photos">
             <img
-              src="assets/project_img/short.png"
+              src="assets/project_img/short.webp"
               alt=""
               id = "short-cir"
               class="info_pro_img"
@@ -186,7 +186,7 @@
         <div class="pro_photo_container" id="pro_photo_container3">
           <div class="pro_photos">
             <img
-              src="assets/project_img/motor driver.png"
+              src="assets/project_img/motor driver.webp"
               alt=""
               class="info_pro_img"
             />
