--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="assets/favicon1.ico" type="image/x-icon" />
-    <title>Gundeep Singh</title>
+    <title>Gundeep Sidhu</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
@@ -62,7 +62,7 @@
             </g>
             </g>
             </svg>
-          <div id="logo">Gundeep<br> &#160Singh</div>
+          <div id="logo">Gundeep<br> &#160Sidhu</div>
         </a>
         
         <div class="menu">
@@ -253,12 +253,12 @@
         <img src="assets/project_img/gundeep_kurta_fin.webp" alt="" class="my_img" />
         <!-- <img src="assets/project_img/gundeep_final.webp" alt=""class="my_img" /> -->
         <div class="about_content">
-          <div id="initials">I am <span class="jatt">Gundeep Singh.</span></div>
+          <div id="initials">I am <span class="jatt">Gundeep Sidhu.</span></div>
           <br />
-          I am really fascinated by the world of Electronics, trying to learn new things through various online resources and replicating projects with some of my own personal touch and creativity.These projects include use of Arduino(micro-controller), Gate chips and basic e-components.
+          I am really fascinated by the world of Electronics, trying to learn new things through various online resources and replicating projects with some of my own personal touch and creativity. These projects include use of microcontrollers(Arduino/STM32) but I prefer working with discrete ICs, be it digital or analog, as they feel more intuitive and offer a sense of accomplishment.
             <br>
-            I am eager to apply this knowledge in real world and also learn new things while doing so. Moreover, I am also good at coding but usually prefer hardware side of things.
-          <br /><br />
+            When it comes to electronics I am a jack of all trades. Moreover, I am also good at coding but usually prefer hardware side of things.
+          <br />
           <div class="per">Personality: <span class="yillow">Introvert</span></div>
           <div class="per">Experience: <span class="yillow">In Pursuit Of</span></div>
           <div class="per">Fun_Fact: <span class="yillow">Sleeps a lot :)</span></div>
