--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <br />
           I am really fascinated by the world of Electronics, trying to learn new things through various online resources and replicating projects with some of my own personal touch and creativity. These projects include use of microcontrollers(Arduino/STM32) but I prefer working with discrete ICs, be it digital or analog, as they feel more intuitive and offer a sense of accomplishment.
             <br>
-            When it comes to electronics I am a jack of all trades. Moreover, I am also good at coding but usually prefer hardware side of things.
+            When it comes to electronics I am a jack of all trades. Moreover, I am also good at coding (hand-coded this website) but usually prefer hardware side of things.
           <br />
           <div class="per">Personality: <span class="yillow">Introvert</span></div>
           <div class="per">Experience: <span class="yillow">In Pursuit Of</span></div>
@@ -314,7 +314,7 @@
           <div class="mail">
             <i class="ri-mail-fill"></i>gdsidhu07@icloud.com
           </div>
-          <div class="phone"><i class="ri-phone-fill"></i>+1 (204) 970-0286</div>
+          <div class="phone"><i class="ri-phone-fill"></i>+1 (204) XXX-XXXX</div>
         </div>
       </div>
     </div>
