added eeprom programmer

--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
           </div>
           <div class="pro_photos">
             <img
-              src="assets/project_img/led-pattern-fin.webp"
+              src="assets/project_img/eepromProg.webp"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">Shift Register Led Display</div>
+            <div class="info_pro">EEPROM programmer</div>
           </div>
         </div>
       </div>
@@ -260,7 +260,7 @@
             When it comes to electronics I am a jack of all trades. Moreover, I am also good at coding (hand-coded this website) but usually prefer hardware side of things.
           <br />
           <div class="per">Personality: <span class="yillow">Introvert</span></div>
-          <div class="per">Experience: <span class="yillow">In Pursuit Of</span></div>
+          <div class="per">Experience: <span class="yillow">Undergraduate Researcher</span></div>
           <div class="per">Fun_Fact: <span class="yillow">Sleeps a lot :)</span></div>
         </div>
       </div>
