--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
         <div class="pro_photo_container" id="pro_photo_container3">
           <div class="pro_photos">
             <img
-              src="assets/project_img/motor driver.webp"
+              src="assets/project_img/Short-circuit-prot - 1.webp"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">PWM motor speed controller</div>
+            <div class="info_pro">E-match Firing Circuit 2.0</div>
           </div>
           <div class="pro_photos">
             <img
