--- a/index.html
+++ b/index.html
@@ -157,21 +157,21 @@
           </div>
           <div class="pro_photos">
             <img
-              src="assets/project_img/eseg - 1.webp"
+              src="assets/project_img/Short-circuit-prot - 1 (1).webp"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">EEPROM 7Segment Display</div>
+            <div class="info_pro">E-match Firing Circuit 2.0</div>
           </div>
         </div>
         <div class="pro_photo_container" id="pro_photo_container2">
           <div class="pro_photos">
             <img
-              src="assets/project_img/Frame-20-04-2025-06-27-36.webp"
+              src="assets/project_img/eseg - 1.webp"
               alt=""
               class="info_pro_img"
             />
-            <div class="info_pro">Binary Counter + Decoder</div>
+            <div class="info_pro">EEPROM 7Segment Display</div>
           </div>
           <div class="pro_photos">
             <img
@@ -184,14 +184,7 @@
           </div>
         </div>
         <div class="pro_photo_container" id="pro_photo_container3">
-          <div class="pro_photos">
-            <img
-              src="assets/project_img/Short-circuit-prot - 1.webp"
-              alt=""
-              class="info_pro_img"
-            />
-            <div class="info_pro">E-match Firing Circuit 2.0</div>
-          </div>
+
           <div class="pro_photos">
             <img
               src="assets/project_img/eepromProg.webp"
@@ -199,6 +192,14 @@
               class="info_pro_img"
             />
             <div class="info_pro">EEPROM programmer</div>
+          </div>
+          <div class="pro_photos">
+            <img
+              src="assets/project_img/Frame-20-04-2025-06-27-36.webp"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Binary Counter + Decoder</div>
           </div>
         </div>
       </div>
